# walld

./: .gitignore  Makefile  README.md  get_version.py  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: walld.1  walldrc.5
src/: config.c  config.h  config_private.h  list.c  list.h  list_private.h  loop.c  loop.h  loop_private.h  magic.c  magic.h  magic_private.h  main.c  main.h  main_private.h
